--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ title: "RyanCV - CV / Resume Jekyll Theme"
 email: "your-email@example.com"
 description: "Jekyll Resume / CV / vCard template"
 author: "Admin"
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/resume-template" # the subpath of your site, e.g. /blog
+url: "https://anonbd.pro/" # the base hostname & protocol for your site, e.g. http://example.com
 date_format: "%b %d, %Y"
 
 # paginations & permalinks
